WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202865
Clearing Website data for a given session should not shut down cached processes for other sessions
https://bugs.webkit.org/show_bug.cgi?id=202865
Summary
Clearing Website data for a given session should not shut down cached process...
Chris Dumez
Reported
2019-10-11 14:01:37 PDT
Clearing Website data for a given session should do shut down cached processes (e.g. suspended processes for the back/forward cache) for other sessions.
Attachments
Patch
(20.63 KB, patch)
2019-10-11 15:28 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(20.63 KB, patch)
2019-10-11 15:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(20.54 KB, patch)
2019-10-12 08:33 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-11 14:02:32 PDT
<
rdar://problem/56202912
>
Chris Dumez
Comment 2
2019-10-11 15:28:41 PDT
Created
attachment 380794
[details]
Patch
Chris Dumez
Comment 3
2019-10-11 15:32:59 PDT
Created
attachment 380795
[details]
Patch
Antti Koivisto
Comment 4
2019-10-11 22:09:40 PDT
Comment on
attachment 380795
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380795&action=review
> Source/WebKit/UIProcess/WebProcessProxy.h:274 > + class ScopePreventingShutdown {
It would be nice to have some sort of WTF template for this. The pattern shows up occasionally.
> Source/WebKit/UIProcess/WebProcessProxy.h:284 > + ~ScopePreventingShutdown() > + { > + if (m_process) {
m_process can't be null here.
> Source/WebKit/UIProcess/WebProcessProxy.h:292 > + RefPtr<WebProcessProxy> m_process;
Ref<>?
Chris Dumez
Comment 5
2019-10-12 08:33:14 PDT
Created
attachment 380827
[details]
Patch
WebKit Commit Bot
Comment 6
2019-10-12 09:17:59 PDT
Comment on
attachment 380827
[details]
Patch Clearing flags on attachment: 380827 Committed
r251048
: <
https://trac.webkit.org/changeset/251048
>
WebKit Commit Bot
Comment 7
2019-10-12 09:18:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug